syntax = "proto3";

import "decimal.proto";

option csharp_namespace = "Ingredients.Protos";

package ingredients;

service IngredientsService {
  
  rpc GetToppings(GetToppingsRequest) returns (GetToppingsResponse);
  
  rpc GetCrusts(GetCrustsRequest) returns (GetCrustsResponse);
      
}

message GetToppingsRequest { }

message GetToppingsResponse {
  repeated Topping toppings = 1;
}

message GetCrustsRequest { }

message GetCrustsResponse {
  repeated Crust crusts = 1;
}

message Topping {
  reserved 3; // Used to be double price
  string id = 1;
  string name = 2;
  customTypes.DecimalValue price = 4;
}

message Crust {
  reserved 4; // Used to be double price
  string id = 1;
  string name = 2;
  int32 size = 3;
  customTypes.DecimalValue price = 5;
}
